--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -76,6 +76,11 @@ footer {
   background-color: $background-color;
 }
 
+/************ site wide settings  ****************************/
+.text-block {
+  background-color: rgba(255,255,255, 0.8);
+}
+
 /************ HOME page ****************************/
 div.home.col.one {
   background-image: url('/images/sun_clouds.png');
@@ -138,9 +143,6 @@ hr {
   background: #a8e0f4;
 }
 
-.text-block {
-  background-color: rgba(255,255,255, 0.8);
-}
 .phone-tooltip {
     position: relative;
     display: inline-block;
