Reformatted footer for different sizes

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -72,6 +72,12 @@ footer {
   height: 60%;
 }
 
+.horizontal_rule {
+  margin-top: 20px;
+  border-top: solid 1px #a8e0f4;
+  width: 120px;
+}
+
 .card {
   background-color: $background-color;
 }
