--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -158,7 +158,7 @@ hr {
 .phone-tooltip .tooltiptext {
     visibility: hidden;
     width: 130px;
-    background-color: $background-color;
+    background-color: white;
     color: #000;
     text-align: center;
     border-radius: 6px;
@@ -171,6 +171,10 @@ hr {
 
 .phone-tooltip:hover .tooltiptext {
     visibility: visible;
+}
+
+#weeks-message {
+  width: auto !important;
 }
 
 /************ ABOUT page ****************************/
