--- a/lib/forall_web/templates/page/index.html.eex
+++ b/lib/forall_web/templates/page/index.html.eex
@@ -23,13 +23,22 @@
 </div>
 <div class="row text-center">
   <div class="col">
-    <iframe class="mb-4" width="560" height="315" src="https://www.youtube.com/embed/e3QuPAOFPHo" 
+    <iframe class="mb-4" width="560" height="315" src="https://www.youtube.com/embed/e3QuPAOFPHo?rel=0" 
       frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
   </div>
 </div>
 <div class="row mb-4">
   <div class="text-block col-8 offset-2">
-    <%= render "welcome_to_jesus.html" %>
+      <select id="weeks-message" class="form-control mt-3">
+        <option value="this_weeks_message">This Week's Message</option>
+        <option value="welcome_to_jesus">Welcome to Jesus</option>
+      </select>
+      <div id="this_weeks_message" class="weeks-message">
+        <%= render "this_weeks_message.html" %>
+      </div>
+      <div id="welcome_to_jesus" class="weeks-message d-none">
+        <%= render "welcome_to_jesus.html" %>
+      </div>
   </div>
 </div>
 
