Added text to the Events page

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -6,8 +6,8 @@ $first-row-height: 400px;
 $normal-font-size: 0.9em;
 $larger-font-size: 1.6em;
 $sans-font: "open sans", sans-serif;
-$background-color: #ecc0c1;
-$card-background: #689eff;
+$background-color: #e6c0ba;
+$card-background: #d5f7e7;
 
 .normal-font {
   font-size: $normal-font-size;
