--- a/lib/forall_web/templates/events/index.html.eex
+++ b/lib/forall_web/templates/events/index.html.eex
@@ -19,8 +19,17 @@
           <img class="card-img-top" src="/images/tony_in_prayer.webp" alt="events_about">
           <div class="card-body events text-center">
             <h5 class="card-title events">TV MINISTRY</h5>
-            <p class="card-text events text-center">
-              Follow our sermons on YouTube.
+            <p class="card-text events text-left">
+              Pastor Tony Freitas uses the Local TV Station, Youtube, Facebook and Website to Preach the Word of God to the ones that he cannot reach in person.<br> 
+              Media is the vehicle for communication fo God’s message to man. And there is no better place to examine media than the Bible because it contains a history of the communication between God and Man as well as the various methods (Medias “Ways”) used to accomplish it. God reveal Himself to Adam and Eve, prophets, Apostles in person and He also used other effective methods that were suitable for the time and person in question for example:<br> 
+Face to face with Adam and Eve: Genesis 3:8<br>
+In the form of an angel for Abraham: Genesis 18:1-3<br>
+In dreams and visions for Joseph : Genesis 37:5<br>
+With a burning bush for Moses: Exodus 3:1-9<br>
+The sound of a voice and the appearance of a dove for the witnesses of Jesus' baptism: Matthew 3:13-17<br>
+Tongues of fire for the Apostles: Acts 2:3-4<br>
+It’s does not matter how you get the true word of God - All it matters is that you listen to it.<br> 
+If you can attend in person to any of our worship services, we urge to do so. Let’s Praise the Lord Together.<br>
             </p>
           </div>
         </div>
@@ -29,8 +38,13 @@
           <img class="card-img-top" src="/images/joyous_hands.webp" alt="Worship Services">
           <div class="card-body events text-center">
             <h5 class="card-title events">Worship Services</h5>
-            <p class="card-text text-center">
-              Every Tuesday, Friday and Sunday
+            <p class="card-text text-left">
+              Each week we must all Worship Together. Worshiping Jesus together may be the single most important thing we do. Every Christian is a member of the universal church because by definition Christians are believers in Christ. They are members of His body. It is important to find a good (Biblical) church.  It is not until we are able to rightly prioritize God above everything else in our world that we can begin to worship in spirit and truth.<br>
+              <br>
+              <b>Romans 12:5</b><br>
+              <i>... so in Christ we who are many form one body, and each member belongs to all the others.</i> (NIV)<br>
+              <br>
+              It is for our own good that God want us in fellowship with other believers. We need each other to grow up in the faith, to learn to serve, to love one another, to exercise our spiritual gifts, and to practice forgiveness.<br>
             </p>
           </div>
         </div>
@@ -39,8 +53,10 @@
           <img class="card-img-top" src="/images/funeral_flowers.jpg" alt="Funeral Services">
           <div class="card-body events">
             <h5 class="card-title events text-center">Funeral Services</h5>
-            <p class="card-text events text-center">
-              Funeral / Memorial Services
+            <p class="card-text events text-left">
+            THE TRANSFORMATION OF LIFE WITH A CARING PASTOR<br>
+            <br>
+            Don’t desert the one who is dying, advises Pastor Tony Freitas of A & Z God's Ministry for All People. The person who is dying usually knows that he or she is dying, and the secret for us is not to be afraid of that or to run away from it. Ask them what they’re thinking about, what they may need. Often, our emotions mirror those of the person with whom we are talking. In those moments, one wounded heart reaches out to another, and they connect. That can be a beautiful experience, Just holding hands and praying.<br>
             </p>
           </div>
         </div>
@@ -58,8 +74,8 @@
                 alt="Spiritual Guidance Support">
           <div class="card-body events">
             <h5 class="card-title events text-center">Spiritual Guidance Support</h5>
-            <p class="card-text events text-center">
-              Weekly visits to Shelter Homes
+            <p class="card-text events text-left">
+            Encourage the homeless to get help through God's Word and His Love. Our Pastor Tony Freitas has the willingness to share his faith at the homeless shelter and to pray with them, even in the streets. God’s will is to use pastor Tony in a mighty way for His glory. We love all people and that includes the homeless! Through God's grace we have been called to uncover the hope of Jesus Christ as we pursue and build relationships with the homeless and to all people. Let the hearts of those rejoice who seek the LORD.
             </p>
           </div>
         </div>
@@ -68,8 +84,16 @@
           <img class="card-img-top" src="/images/helping_elderly.jpg" alt="Helping the Elderly">
           <div class="card-body events">
             <h5 class="card-title events text-center">Helping the Elderly</h5>
-            <p class="card-text events text-center">
-              Daily visits to different nursing homes.
+            <p class="card-text events text-left">
+            Spiritual Need!<br>
+            <br>
+            Recognize the end of life, rapidly declining health and crisis as a time for spiritual need, which may be defined differently by individuals but certainly needs to be part of everyone's care.<br>
+            <br>
+            "Our Mission is to Enrich the Quality of Life for Every Person We Meet", said Pastor Tony Freitas.<br>
+            <br>
+            We at A & Z God's Ministry for All People we have the privilege of leading a weekly worship service for residents of a local nursing home for several years. Through that worship service, we seek to reach out to all residents to share Christ's love.<br>
+            <br>
+            Places we Worship Regularly in: CareOne at Randolph / Southeast Rehabilitation North Easton / Copley At Stoughton / BayPointe Rehabilitation Center in Brockton. Call us for day and time. You are welcomed to attend all worship with us. We also do weekly visits to other nursing homes in our area.
             </p>
           </div>
         </div>
@@ -79,8 +103,18 @@
                 alt="Marriage Preparation Course">
           <div class="card-body events">
             <h5 class="card-title events text-center">Indoor and Outdoor Weddings</h5>
-            <p class="card-text events text-center">
-              Call or email to schedule
+            <p class="card-text events text-left">
+            Do you want an Indoor or Outdoor Wedding?<br>
+            <br>
+            When a bride and groom begin to plan their wedding they should think about all of the wedding options. A wedding style is something that every wedding has. No, it is not “stylish”- it is a style. Do you envision your wedding being outdoors or indoors? Along those same lines, what kind of venue do you envision your wedding taking place at?<br>
+            <br>
+            Married on the beach, in the park, on the mountains, or in your backyard, ring exchange or ring ceremony, indoor or outdoor. English or Portuguese it is your choice.<br>
+            <br>
+            MORNING WEDDING, EARLY AFTERNOON WEDDING, LATER EVENING WEDDING<br>
+            <br>
+            Having Pastor Tony Freitas officiate your wedding is to have a CHRISTIAN WEDDING CEREMONY or just a simple wedding. Your marriage must stand by the strength of your love and the power of faith in each other and in God. We can do indoor or outdoor. It is all about the two of you.<br>
+            <br>
+            Whichever option you choose though, your wedding day will be amazing!
             </p>
           </div>
         </div>
