Fixed spelling error on Events page

--- a/lib/forall_web/templates/events/index.html.eex
+++ b/lib/forall_web/templates/events/index.html.eex
@@ -21,7 +21,7 @@
             <h5 class="card-title events">TV MINISTRY</h5>
             <p class="card-text events text-left">
               Pastor Tony Freitas uses the Local TV Station, Youtube, Facebook and Website to Preach the Word of God to the ones that he cannot reach in person.<br> 
-              Media is the vehicle for communication fo God’s message to man. And there is no better place to examine media than the Bible because it contains a history of the communication between God and Man as well as the various methods (Medias “Ways”) used to accomplish it. God reveal Himself to Adam and Eve, prophets, Apostles in person and He also used other effective methods that were suitable for the time and person in question for example:<br> 
+              Media is the vehicle for communication for God’s message to man. And there is no better place to examine media than the Bible because it contains a history of the communication between God and Man as well as the various methods (Medias “Ways”) used to accomplish it. God reveal Himself to Adam and Eve, prophets, Apostles in person and He also used other effective methods that were suitable for the time and person in question for example:<br> 
 Face to face with Adam and Eve: Genesis 3:8<br>
 In the form of an angel for Abraham: Genesis 18:1-3<br>
 In dreams and visions for Joseph : Genesis 37:5<br>
