Added popover for Events TV Ministry

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -417,6 +417,9 @@ div.card-body.events {
   font-family: "open sans", sans-serif;
 }
 
+u {
+  cursor: pointer; 
+}
 /************ CONTACT page ****************************/
 .contact_ways {
   background-image: 
