--- a/lib/forall_web/templates/about/index.html.eex
+++ b/lib/forall_web/templates/about/index.html.eex
@@ -58,8 +58,7 @@
 </div>
 <div class="row justify-content-center mb-4">
   <div class="col-7 text-block p-3">
-    <a class="twitter-timeline"
-      href="https://twitter.com/azgodsministry">
+    <a class="twitter-timeline" href="https://twitter.com/azgodsministry" data-tweet-limit="5">
     Tweets by @azgodsministry
 </a>
  <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>  </div>
