--- a/lib/forall_web/templates/layout/app.html.eex
+++ b/lib/forall_web/templates/layout/app.html.eex
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="A & Z Gods Ministry For All People Stoughton Brockton">
     <meta name="author" content="george@azgodsminsitry.com">
 
@@ -12,44 +12,42 @@
   </head>
 
   <body>
-    <div class="container-fluid">
-      <header class="header">
-        <nav class="navbar navbar-expand-lg navbar-light">
-          <a class="navbar-brand" href="/">
-            <img src="/images/az_icon_upgraded.gif" width="250" height="" alt="">
-          </a>
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" 
-                  aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-              <li class="nav-item <%= if Kernel.inspect(@view_module) == "ForallWeb.PageView", do: 'active' %>">
-                <a class="nav-link" href="/">HOME <span class ="sr-only">(current)</span></a>
-              </li>
-              <li class="nav-item <%= if Kernel.inspect(@view_module) == "ForallWeb.ServicesView", do: 'active' %>">
-                <a class="nav-link" href="/services">SERVICES</a>
-              </li>
-              <li class="nav-item <%= if Kernel.inspect(@view_module) == "ForallWeb.EventsView", do: 'active' %>">
-                <a class="nav-link" href="/events">EVENTS</a>
-              </li>
-              <li class="nav-item <%= if Kernel.inspect(@view_module) == "ForallWeb.DonateView", do: 'active' %>">
-                <a class="nav-link" href="/donate">DONATE</a>
-              </li>
-              <li class="nav-item <%= if Kernel.inspect(@view_module) == "ForallWeb.AboutView", do: 'active' %>">
-                <a class="nav-link" href="/about">ABOUT US</a>
-              </li>
-              <li class="nav-item <%= if Kernel.inspect(@view_module) == "ForallWeb.ContactView", do: 'active' %>">
-                <a class="nav-link" href="/contact">CONTACT</a>
-              </li>
-            </ul>
-          </div>
-        </nav>
-      </header>
 
-      <main role="main">
-        <%= render @view_module, @view_template, assigns %>
-      </main>
+    <nav class="navbar navbar-expand-lg fixed-top navbar-light">
+      <a class="navbar-brand" href="/">
+        <img src="/images/az_icon_upgraded.gif" width="115" height="" alt="">
+      </a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" 
+              aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item <%= if Kernel.inspect(@view_module) == "ForallWeb.PageView", do: 'active' %>">
+            <a class="nav-link" href="/">HOME <span class ="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item <%= if Kernel.inspect(@view_module) == "ForallWeb.ServicesView", do: 'active' %>">
+            <a class="nav-link" href="/services">SERVICES</a>
+          </li>
+          <li class="nav-item <%= if Kernel.inspect(@view_module) == "ForallWeb.EventsView", do: 'active' %>">
+            <a class="nav-link" href="/events">EVENTS</a>
+          </li>
+          <li class="nav-item <%= if Kernel.inspect(@view_module) == "ForallWeb.DonateView", do: 'active' %>">
+            <a class="nav-link" href="/donate">DONATE</a>
+          </li>
+          <li class="nav-item <%= if Kernel.inspect(@view_module) == "ForallWeb.AboutView", do: 'active' %>">
+            <a class="nav-link" href="/about">ABOUT US</a>
+          </li>
+          <li class="nav-item <%= if Kernel.inspect(@view_module) == "ForallWeb.ContactView", do: 'active' %>">
+            <a class="nav-link" href="/contact">CONTACT</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+
+    <main role="main" class="container-fluid">
+      <%= render @view_module, @view_template, assigns %>
+    </main>
 
       <footer>
         <div class="row p-3">
