Updated video list

--- a/lib/forall_web/templates/about/options_tony_english.html.eex
+++ b/lib/forall_web/templates/about/options_tony_english.html.eex
@@ -1,3 +1,4 @@
+<option value="NlZAX9F6hUk">Come, Follow me!</option>
 <option value="C13dqhF5grY">John 3:16</option>
 <option value="k0MlkYOSqoE">Power and Authority For Healing</option>
 <option value="9TSrEtpDems">How to be Blessed?</option>
