--- a/lib/forall_web/templates/about/options_tony_portuguese.html.eex
+++ b/lib/forall_web/templates/about/options_tony_portuguese.html.eex
@@ -1,3 +1,5 @@
+<option value="OX-QyhRDM40">A diferença entre ser Cristão e ser Discipulo</option>
+<option value="Hpe_KuRJ_yA">Que quer dizer ser Discipulo de Deus?</option>
 <option value="SS1svya2khU">A Bondade de Deus</option>
 <option value="_daYXy8Wb6E">Porquê receber Jesus Cristo?</option>
 <option value="KHAQdF-jDOw">Seguidor De Cristo</option>
