--- a/lib/forall_web/templates/about/options_zenalia.html.eex
+++ b/lib/forall_web/templates/about/options_zenalia.html.eex
@@ -1,4 +1,5 @@
-<option value="h2PO8MCfsaQ">Life</option>
+<option value="hcZdqLYChEQ">Life (Part-2)</option>
+<option value="h2PO8MCfsaQ">Life (Part-1)</option>
 <option value="b8eCoqQm7CA">New Years Resolution</option>
 <option value="XzCQQKzzofU">Christmas</option>
 <option value="0OlLvUlamBU">Thanksgiving</option>
