Display latest video

--- a/lib/forall_web/templates/about/index.html.eex
+++ b/lib/forall_web/templates/about/index.html.eex
@@ -52,7 +52,7 @@
     </div>
   </div>
   <div class="col-md-7 text-block p-3">
-    <iframe class="video" width="560" height="315" src="https://www.youtube.com/embed/C13dqhF5grY?rel=0" 
+    <iframe class="video" width="560" height="315" src="https://www.youtube.com/embed/NlZAX9F6hUk?rel=0" 
       frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
   </div>
 </div>
