--- a/lib/forall_web/templates/page/index.html.eex
+++ b/lib/forall_web/templates/page/index.html.eex
@@ -1,5 +1,5 @@
 <div class="row">
-  <div class="home col one">
+  <div class="col home one">
       <div id="home-one">Jesus is the Only Way to Heaven</div>
   </div>
 </div>
