--- a/lib/forall_web/templates/about/options_zenalia.html.eex
+++ b/lib/forall_web/templates/about/options_zenalia.html.eex
@@ -1,3 +1,4 @@
+<option value="0" selected>Through The Eyes of Faith</option>
 <option value="hcZdqLYChEQ">Life (Part-2)</option>
 <option value="h2PO8MCfsaQ">Life (Part-1)</option>
 <option value="b8eCoqQm7CA">New Years Resolution</option>
