--- a/lib/forall_web/templates/page/index.html.eex
+++ b/lib/forall_web/templates/page/index.html.eex
@@ -21,10 +21,12 @@
     <img class="img" width="100" height="200px" src="images/clipart-cross-right.png">
   </div>
 </div>
-<div class="row text-center">
-  <div class="col">
-    <iframe class="mb-4" width="560" height="315" src="https://www.youtube.com/embed/e3QuPAOFPHo?rel=0" 
-      frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+<div class="row justify-content-center my-5">
+  <div class="col-sm-12 col-md-8">
+    <div class="embed-responsive embed-responsive-16by9">
+      <iframe class="embed-responsive-item mb-4" src="https://www.youtube.com/embed/e3QuPAOFPHo?rel=0" 
+      allow="autoplay; encrypted-media" allowfullscreen></iframe>
+    </div>
   </div>
 </div>
 <div class="row mb-4">
