--- a/lib/forall_web/templates/page/this_weeks_message.html.eex
+++ b/lib/forall_web/templates/page/this_weeks_message.html.eex
@@ -5,8 +5,10 @@
     May the God of hope fill you with all joy and peace in believing so that by the power of the Holy Spirit you may abound in hope. We all need hope and we all need joy and we need peace. Let's together listen to today's message. 
   </div>
   <div class="col">
-    <iframe class="mb-4" width="560" height="315" src="https://www.youtube.com/embed/Gc-oylFo-5A?rel=0" 
-      frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+    <div class="embed-responsive embed-responsive-16by9">
+      <iframe class="embed-responsive-item mb-4"src="https://www.youtube.com/embed/Gc-oylFo-5A?rel=0" 
+        allow="autoplay; encrypted-media" allowfullscreen></iframe>
+    </div>
   </div>
 </div>
     
