--- a/lib/forall_web/templates/services/index.html.eex
+++ b/lib/forall_web/templates/services/index.html.eex
@@ -30,8 +30,11 @@
 </div>
 
 <div class="row my-5">
-  <div class="col text-right">
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/ckbPGBehMpU" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+  <div class="col ml-4">
+    <div class="embed-responsive embed-responsive-16by9">
+      <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/ckbPGBehMpU?rel=0" 
+          allow="autoplay; encrypted-media" allowfullscreen></iframe>
+    </div>
   </div>
   <div class="col text-left">
     <div class="h-100">
