--- a/lib/forall_web/templates/about/options_scutt.html.eex
+++ b/lib/forall_web/templates/about/options_scutt.html.eex
@@ -1,2 +1,3 @@
 <option value="0" selected>Pastor Scutt</option>
+<option value="Apvw8VY-m4M">The Prophets Daniel & Joseph</option>
 <option value="5dZorb68d5c">Get ready Jesus is coming!</option>
