Updating video list

--- a/lib/forall_web/templates/about/options_tony_portuguese.html.eex
+++ b/lib/forall_web/templates/about/options_tony_portuguese.html.eex
@@ -1,4 +1,6 @@
 <option value="0" selected>Pastor Tony (Portuguese)</option>
+<option value="7EwpNtSEGcY">João 3.16</option>
+<option value="typECdkUIcc">Jesus e o Homem rico.</option>
 <option value="OX-QyhRDM40">A diferença entre ser Cristão e ser Discipulo</option>
 <option value="Hpe_KuRJ_yA">Que quer dizer ser Discipulo de Deus?</option>
 <option value="SS1svya2khU">A Bondade de Deus</option>
