--- a/lib/forall_web/templates/page/this_weeks_message.html.eex
+++ b/lib/forall_web/templates/page/this_weeks_message.html.eex
@@ -1,14 +1,19 @@
 <div class="row mt-3">
   <div class="col">
-    <h3>Peace with God!</h3>
-    We have peace with God through our Lord Jesus Christ.
-    May the God of hope fill you with all joy and peace in believing so that by the power of the Holy Spirit you may abound in hope. We all need hope and we all need joy and we need peace. Let's together listen to today's message. 
+    <h3>Bible Study and Worship</h3>
+    The Bible tells what we are transformed by the renewing of our minds in Romans 12.2.
+    Together you will see first hand how learning and applying the truths from the Bible 
+    can change your life forever.<br>
+    <br>
+    So what do you say? Are you ready to take a risk and be bold with us to change your life?<br>
+    <br>
+    Every Thursday at 7:00 PM, 418 Belmont St, Brockton, MA 02301. For more information contact us 
+    at:<br>
+    1-505-297-1829 or 1-781-385-0179<br>
+    <a href="mailto:azgodsministryforallpeople@gmail.com">azgodsministryforallpeople@gmail.com</a>.
   </div>
   <div class="col">
-    <div class="embed-responsive embed-responsive-16by9">
-      <iframe class="embed-responsive-item mb-4"src="https://www.youtube.com/embed/Gc-oylFo-5A?rel=0" 
-        allow="autoplay; encrypted-media" allowfullscreen></iframe>
-    </div>
+    <a href="https://www.google.com/maps/place/A+%26+Z+God's+Ministry+for+All+People/@42.1251711,-71.1100367,16z/data=!4m5!3m4!1s0x89e486af207fcf7b:0x448760cd2f509f0b!8m2!3d42.1244994!4d-71.104563?hl=en&authuser=0"><img class="img-fluid" src="/images/stoughton_location.png"  alt="Stoughton location"></a>
   </div>
 </div>
     
