--- a/lib/forall_web/templates/page/this_weeks_message.html.eex
+++ b/lib/forall_web/templates/page/this_weeks_message.html.eex
@@ -13,7 +13,7 @@
     <a href="mailto:azgodsministryforallpeople@gmail.com">azgodsministryforallpeople@gmail.com</a>.
   </div>
   <div class="col">
-    <a href="https://www.google.com/maps/place/A+%26+Z+God's+Ministry+for+All+People/@42.1251711,-71.1100367,16z/data=!4m5!3m4!1s0x89e486af207fcf7b:0x448760cd2f509f0b!8m2!3d42.1244994!4d-71.104563?hl=en&authuser=0"><img class="img-fluid" src="/images/stoughton_location.png"  alt="Stoughton location"></a>
+   <a href="https://www.google.com/maps/place/A+%26+Z+God's+Ministry+for+All+People/@42.0765554,-71.0389981,16.88z/data=!4m12!1m6!3m5!1s0x89e486af207fcf7b:0x448760cd2f509f0b!2sA+%26+Z+God's+Ministry+for+All+People!8m2!3d42.1244994!4d-71.104563!3m4!1s0x89e4851b44455555:0x59f4b8ea0a795afb!8m2!3d42.0763778!4d-71.0369157?hl=en&authuser=0"><img class="img-fluid" src="/images/brockton_location.png"  alt="Brockton location"></a> 
   </div>
 </div>
     
